ARROW-3053: [Python] Add unit test for strided object conversion that was failing in 0.9.0

Author: Krisztián Szűcs <szucs.krisztian@gmail.com>
Author: Wes McKinney <wesm+git@apache.org>

Closes #2429 from kszucs/ARROW-3053 and squashes the following commits:

9f3f4739 <Wes McKinney> Do not install hdf5, remove iterator protocol from NdarrayIndexer
5c31f496 <Krisztián Szűcs> hdf5 decimal roundtrip