ci/travis_script_python.sh
@@ -112,6 +112,7 @@ pushd $ARROW_PYTHON_DIR
 
 # Other stuff pip install
 pip install -q -r requirements.txt
+
 if [ "$PYTHON_VERSION" == "3.6" ]; then
     pip install -q pickle5
 fi
